--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
-  template-dash:
+  template-flask:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: template-dash
+    container_name: template-flask
     volumes:
       - ./logs:/app/logs:rw
       - ./database:/app/database:rw
@@ -16,10 +16,13 @@ services:
     restart: unless-stopped
     command: /app/run_server.sh
     environment:
-      VIRTUAL_HOST: template.ucsd.edu
+      VIRTUAL_HOST: template.gnps2.org
       VIRTUAL_PORT: 5000
-      LETSENCRYPT_HOST: template.ucsd.edu
-      LETSENCRYPT_EMAIL: miw023@ucsd.edu
+      LETSENCRYPT_HOST: template.gnps2.org
+      LETSENCRYPT_EMAIL: mwang87@gmail.com
+      ADMIN_PW: ${ADMIN_PW}
+      SECRET_KEY: ${SECRET_KEY}
+
 
 
 networks:
